[gd_scene load_steps=3 format=3 uid="uid://oev7he43flmr"]

[ext_resource type="Theme" uid="uid://dw6f6r52hddos" path="res://theme/ui_theme.tres" id="1_e4h2y"]
[ext_resource type="Script" uid="uid://d0jykaiokfcpp" path="res://scripts/optionMenu.gd" id="1_k0bo8"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 482.0
offset_bottom = 276.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("1_e4h2y")
script = ExtResource("1_k0bo8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -113.0
offset_right = 75.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Fullscreen_checkbox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
text = "Fullscreen  "

[node name="Master_Vol_Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Master_Vol" type="Label" parent="MarginContainer/VBoxContainer/Master_Vol_Slider"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = -10.0
offset_right = 51.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Main Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music_Vol_Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music_Vol" type="Label" parent="MarginContainer/VBoxContainer/Music_Vol_Slider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = -10.0
offset_right = 58.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX_Vol_Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX_Vol" type="Label" parent="MarginContainer/VBoxContainer/SFX_Vol_Slider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = -10.0
offset_right = 49.0
offset_bottom = 30.0
grow_horizontal = 2
text = "SFX volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 14.0
offset_right = 85.0
offset_bottom = 44.0
text = "back"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.14509805, 0.16862746, 0.20392157, 1)

[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen_checkbox" to="." method="_on_full_screen_toggled"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Master_Vol_Slider" to="." method="_on_main_vol_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Master_Vol_Slider" to="." method="_on_main_vol_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Music_Vol_Slider" to="." method="_on_music_vol_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music_Vol_Slider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/SFX_Vol_Slider" to="." method="_on_sfx_vol_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX_Vol_Slider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
